# solana-betting-pool

./: .env.template  .gitignore  README.md  banana-admin-key-pair.json  commits.csv  example-json.txt  history.csv  index.html  issues.csv  issues.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
.github/workflows/: test-anchor.yml
anchor/: .gitignore  Anchor.toml
anchor/programs/horserace/: Cargo.toml  test_calc.rs
anchor/programs/horserace/src/: constants.rs  errors.rs  lib.rs  mod.rs  utils.rs
anchor/programs/horserace/src/accounts/: competition.rs  mod.rs
anchor/programs/horserace/src/instructions/: mod.rs  utils.rs
anchor/programs/horserace/src/instructions/admin/: create_competition.rs  create_pool.rs  create_pool_oracle_transformer.rs  create_treasury.rs  deposit_to_treasury.rs  init_pool_id_counter.rs  mod.rs  settle_pool.rs  settle_pool_by_price.rs  update_competition.rs  update_competiton.rs  update_pool_price_feed.rs  withdraw_from_treasury.rs
anchor/programs/horserace/src/instructions/treasury/: mod.rs
anchor/programs/horserace/src/instructions/user/: cancel_bet.rs  create_bet.rs  mod.rs
anchor/programs/horserace/src/states/: bet.rs  competition.rs  mod.rs  pool.rs  pool_oracle_transformer.rs  treasury.rs
anchor/programs/horserace/tests/: settle_pool.rs
project/: package.json
src/: App.css  BananaApp.tsx  competition-pools.ts  config.ts  features.ts  index copy.css  index.css  main.tsx  mockdata.ts  routes.tsx  types.ts  utils.ts  websocketManager.ts
(+210 files in other folders)
