[package]
name = "horse_race"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "horse_race"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
pyth-solana-receiver-sdk = "0.5.0"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18.11"
solana-sdk = "1.18.11"
mpl-token-metadata = "5.1.0"
anchor-spl = "0.30.1"
rand = "0.9.0"
tokio = { version = "1.0", features = ["full"] }